Time: 59 ms (22.05%), Space: 90.1 MB (93.83%) - LeetHub