@@ -1,38 +1,42 @@
 class RandomizedSet {
-    private ArrayList<Integer> list;
-    private Map<Integer, Integer> map;
+    List<Integer> randList;
+    Map<Integer, Integer> randMap;
 
     public RandomizedSet() {
-        list = new ArrayList<>();
-        map = new HashMap<>();
+        randList = new LinkedList<>();
+        randMap = new HashMap<>();
     }
-
-    public boolean search(int val) {
-        return map.containsKey(val);
-    }
-
+    
     public boolean insert(int val) {
-        if (search(val)) return false;
-
-        list.add(val);
-        map.put(val, list.size() - 1);
+        if (randMap.containsKey(val)) {
+            return false;    
+        }
+        randList.add(val);
+        randMap.put(val, randList.size() - 1);
         return true;
     }
-
+    
     public boolean remove(int val) {
-        if (!search(val)) return false;
-
-        int index = map.get(val);
-        list.set(index, list.get(list.size() - 1));
-        map.put(list.get(index), index);
-        list.remove(list.size() - 1);
-        map.remove(val);
-
-        return true;
+        if (randMap.containsKey(val)) {
+            randList.set(randMap.get(val), randList.get(randList.size() - 1));
+            randMap.put(randList.get(randList.size() - 1), randMap.get(val));
+            randMap.remove(val);
+            randList.removeLast();
+            return true;    
+        }
+        return false;
     }
-
+    
     public int getRandom() {
         Random rand = new Random();
-        return list.get(rand.nextInt(list.size()));
+        return randList.get(rand.nextInt(randList.size()));
     }
 }
+
+/**
+ * Your RandomizedSet object will be instantiated and called as such:
+ * RandomizedSet obj = new RandomizedSet();
+ * boolean param_1 = obj.insert(val);
+ * boolean param_2 = obj.remove(val);
+ * int param_3 = obj.getRandom();
+ */
